# light-firmware

./: Cargo.toml  Complete_CI_Execution.md  LICENSE  README.md
.github/scripts/: final_report.py  main.sh  script.py  semaphore.sh
.github/workflows/: code_quality.yml  deploy.yml  firmware_compliance.yml
src/: main.rs
