[package]
name = "light-firmware"
version = "0.1.0"
edition = "2024"
description = "A light implemented with the ascot crate."
license = "MIT"
resolver = "2"
publish = false

[dependencies]
ascot.version = "0.1.0"
ascot.git = "https://github.com/SoftengPoliTo/ascot"

ascot-os.version = "0.1.0"
ascot-os.git = "https://github.com/SoftengPoliTo/ascot"

async-lock.version = "3.3"
async-lock.default-features = false

clap.version = "4.5"
clap.features = ["derive"]

serde.version = "1.0"
serde.default-features = false
serde.features = ["derive"]

tokio.version = "1.0"
tokio.default-features = false
tokio.features = ["rt", "rt-multi-thread"]

tracing-subscriber.version = "0.3"
tracing-subscriber.default-features = false
tracing-subscriber.features = ["env-filter", "fmt", "std"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = "unwind"
incremental = false
overflow-checks = false
strip = "debuginfo"
